--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         </div>
     </header>
     <main>
+        <div class="boxloader">
+            <div class="loader">
+                <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo">
+            </div>
+        </div>
         <section class="info">
             <div class="d-title">
                 <h1>Réservez le menu qui vous convient</h1>
