--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -10,7 +10,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=shrikhand">
+    
+    <!--
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&family=Roboto:wght@700&family=Shrikhand&display=swap" rel="stylesheet">-->
 </head>
 <body>
     <header>
@@ -31,7 +34,7 @@
             <div class="all-menu">
                 <div class="menu">
                     <div class="menu-titre">
-                        <h1>La palette du goût</h1>
+                        <h1 class="fontSpecial">La palette du goût</h1>
                     </div>
                     <div>
                         <i class="fa-regular fa-heart"></i>
