--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="/scss/stylemenu1.css">
+    <link rel="stylesheet" href="/scss/stylemenu2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=shrikhand">
 </head>
 <body>
     <header>
@@ -38,14 +37,14 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Entrées</h2>
                     </div>
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Ravioles de foie gras </h2>
+                                <p>Accompagnées de leur crème à la truffe</p>
                             </div>
                             <div class="prix">
                                 <p>25€</p>
@@ -56,11 +55,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Caviar osciètre </h2>
+                                <p>Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -68,28 +67,40 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Homard et espuma de potiron</h2>
+                                <p>Marinés aux zestes d'orange</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>20€</p>
+                            </div>
+                            <div class="valide">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card-solo">
+                            <div class="secleft">
+                                <h2>Foie gras de canard cuit entier</h2>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="prix">
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Plats</h2>
                     </div>
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Noix de coquilles Saint-Jacques</h2>
+                                <p>Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>40€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -97,11 +108,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Langoustine poêlée</h2>
+                                <p>Purée de patate douce</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -109,28 +120,28 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Mijoté de queue de bœuf</h2>
+                                <p>Et riz sauvage aux zestes de citron</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>45€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Desserts</h2>
                     </div>
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Macaron noisette et chocolat</h2>
+                                <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>18€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -138,11 +149,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Baba au rhum revisité </h2>
+                                <p>Avec son coulis de citron</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>22€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -150,22 +161,18 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Tarte au citron meringuée </h2>
+                                <p>Déstructurée</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>28€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="btn-con">
-                            <a href="#">
-                                <div class="btn">
-                                    <h2>Commander</h2>
-                                </div>
-                            </a>
+                            <a class="btn" href="#">Commander</a>
                         </div>
                     </div>    
                 </div>
