--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -10,7 +10,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=shrikhand">
 </head>
 <body>
     <header>
@@ -38,7 +37,7 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Entrées</h2>
                     </div>
                     <div class="menu-cards">
@@ -79,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Plats</h2>
                     </div>
                     <div class="menu-cards">
@@ -120,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Desserts</h2>
                     </div>
                     <div class="menu-cards">
@@ -161,11 +160,7 @@
                             </div>
                         </div>
                         <div class="btn-con">
-                            <a href="#">
-                                <div class="btn">
-                                    <h2>Commander</h2>
-                                </div>
-                            </a>
+                            <a class="btn" href="#">Commander</a>
                         </div>
                     </div>    
                 </div>
