--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -36,9 +36,14 @@
                     <div class="menu-titre">
                         <h1 class="fontSpecial">La palette du goût</h1>
                     </div>
-                    <div class=>
+                    <div class="heart-btn">
                         <i class="fa-regular fa-heart heart "></i>
-                        <i  class="fa-solid fa-heart heartColore "></i>
+                        <input type="checkbox" name="cd" id="cd">
+                        <label for="cd">
+                            
+                            <i  class="fa-solid fa-heart heartColore "></i>
+                        </label>
+                
                     </div>
                 </div>
                 <div>
