--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -32,8 +32,14 @@
                     <div class="menu-titre">
                         <h1>Le délice des sens</h1>
                     </div>
-                    <div>
-                        <i class="fa-regular fa-heart"></i>
+                    <div class="heart-btn">
+                        <i class="fa-regular fa-heart heart "></i>
+                        <input type="checkbox" name="cd" id="cd">
+                        <label for="cd">
+                            
+                            <i  class="fa-solid fa-heart heartColore "></i>
+                        </label>
+                
                     </div>
                 </div>
                 <div>
