--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -35,15 +35,12 @@
                 <div class="menu">
                     <div class="menu-titre">
                         <h1 class="fontSpecial">La palette du goût</h1>
-                    </div>
-                    <div class="heart-btn">
-                        <i class="fa-regular fa-heart heart "></i>
-                        <input type="checkbox" name="cd" id="cd">
-                        <label for="cd">
-                            
-                            <i  class="fa-solid fa-heart heartColore "></i>
-                        </label>
-                
+                        <div class="heart-btn">
+                            <label class="container-like">
+                                <input type="checkbox" />
+                                <span class="like"></span>
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div>
