--- a/pages/menu_2.html
+++ b/pages/menu_2.html
@@ -30,16 +30,14 @@
             <div class="all-menu">
                 <div class="menu">
                     <div class="menu-titre">
-                        <h1>Le délice des sens</h1>
-                    </div>
-                    <div class="heart-btn">
-                        <i class="fa-regular fa-heart heart "></i>
+                        <h1 class="fontSpecial">Le délice des sens</h1>
                         <input type="checkbox" name="cd" id="cd">
                         <label for="cd">
-                            
+                            <i class="fa-regular fa-heart heart "></i>
                             <i  class="fa-solid fa-heart heartColore "></i>
                         </label>
-                
+                    </div>
+                    <div class="heart-btn">    
                     </div>
                 </div>
                 <div>
