--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -30,16 +30,13 @@
             <div class="all-menu">
                 <div class="menu">
                     <div class="menu-titre">
-                        <h1>Le délice des sens</h1>
-                    </div>
-                    <div class="heart-btn">
-                        <i class="fa-regular fa-heart heart "></i>
-                        <input type="checkbox" name="cd" id="cd">
-                        <label for="cd">
-                            
-                            <i  class="fa-solid fa-heart heartColore "></i>
-                        </label>
-                
+                        <h1 class="fontSpecial">À la française</h1>
+                        <div class="heart-btn">
+                            <label class="container-like">
+                                <input type="checkbox" />
+                                <span class="like"></span>
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -49,8 +46,8 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Tartare de poulpe acidulé</h2>
+                                <p>Aux zestes d'orange</p>
                             </div>
                             <div class="prix">
                                 <p>25€</p>
@@ -61,11 +58,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Velouté de légumes d'antan</h2>
+                                <p>Carotte, panais, topinambour</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -73,11 +70,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Soupe à l'oignon</h2>
+                                <p>Revisitée</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>20€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -90,11 +87,11 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Coquilles Saint-Jacques</h2>
+                                <p>Accompagnées d'une purée de panais</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>40€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -102,11 +99,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Magret de canard</h2>
+                                <p>Et parmentier de pommes de terre</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -114,11 +111,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                <p>Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>44€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -131,11 +128,11 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Pétales de violettes glacés</h2>
+                                <p>Et purée de noisettes</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>18€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -143,11 +140,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Fondant au chocolat</h2>
+                                <p>Revisité</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>22€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -155,11 +152,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzuuuuuuuuuuuuuuuuuuu</p>
+                                <h2>Millefeuille croustillant</h2>
+                                <p>Myrtilles et pâte d’amande</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>23€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
