--- a/pages/menu_2.html
+++ b/pages/menu_2.html
@@ -18,26 +18,25 @@
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
             </a>
             <div class="logo"> 
-                <img src="/assets/images/logo/ohmyfood.png">
+                <img src="/assets/images/logo/ohmyfood.png" alt="logo">
             </div>
         </div>
     </header>
     <main>
         <section class="all">
             <div class="image-principal">
-                <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image resto">
             </div>
             <div class="all-menu">
                 <div class="menu">
                     <div class="menu-titre">
-                        <h1 class="fontSpecial">Le délice des sens</h1>
-                        <input type="checkbox" name="cd" id="cd">
-                        <label for="cd">
-                            <i class="fa-regular fa-heart heart "></i>
-                            <i  class="fa-solid fa-heart heartColore "></i>
-                        </label>
-                    </div>
-                    <div class="heart-btn">    
+                        <h1 class="fontSpecial">La palette du goût</h1>
+                        <div class="heart-btn">
+                            <label class="container-like">
+                                <input type="checkbox" />
+                                <span class="like"></span>
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -47,7 +46,7 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
+                                <h2>Tartare de thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
                             <div class="prix">
@@ -141,7 +140,7 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Crème brulée </h2>
+                                <h2>Crème brûlée </h2>
                                 <p>Revisitée</p>
                             </div>
                             <div class="prix">
@@ -175,7 +174,7 @@
     <footer>
         <div class="sectionftr">
             <div class="footerLogo">
-                <img src="/assets/images/logo/ohmyfoodwhite.svg">
+                <img src="/assets/images/logo/ohmyfoodwhite.svg" alt="logo">
             </div>
             <div class="allFooterLink">
                 <div class="footerlink1">
@@ -188,7 +187,7 @@
                 </div>
                 <div class="footerlink3">
                     <a href="#">Mentions légales</a><br>
-                    <a href="#">contact</a>
+                    <a href="mailto:email@sample.com">contact</a>
                 </div> 
             </div>
         </div>
