--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="boxloader">
         <div class="loader">
-            <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo">
+            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo">
         </div>
     </div>
     <header>
@@ -95,7 +95,7 @@
                 <div class="allBtnCardUp">
                     <article class="sectionBtnResto">
                         <div class="cards-resto">
-                            <a class="link" href="/pages/menu_1.html">
+                            <a class="link" href="pages/menu_1.html">
 
                             </a>
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image resto">
@@ -118,7 +118,7 @@
                     </article>
                     <article class="sectionBtnResto">
                         <div class="cards-resto">
-                            <a class="link" href="/pages/menu_2.html">
+                            <a class="link" href="pages/menu_2.html">
                                 
                             </a>
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image resto">
@@ -143,7 +143,7 @@
                 <div class="allBtnCardDown">    
                     <article class="sectionBtnResto">
                         <div class="cards-resto">
-                            <a class="link" href="/pages/menu_3.html">
+                            <a class="link" href="pages/menu_3.html">
                             
                             </a>
                             <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image resto">
@@ -164,7 +164,7 @@
                     </article>
                     <article class="sectionBtnResto">
                         <div class="cards-resto">
-                            <a class="link" href="/pages/menu_4.html">
+                            <a class="link" href="pages/menu_4.html">
 
                             </a>
                             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image resto">
