--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -18,14 +18,14 @@
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
             </a>
             <div class="logo"> 
-                <img src="/assets/images/logo/ohmyfood.png" alt="logo">
+                <img src="../assets/images/logo/ohmyfood.png" alt="logo">
             </div>
         </div>
     </header>
     <main>
         <section class="all">
             <div class="image-principal">
-                <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image resto">
+                <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image resto">
             </div>
             <div class="all-menu">
                 <div class="menu">
@@ -173,7 +173,7 @@
     <footer>
         <div class="sectionftr">
             <div class="footerLogo">
-                <img src="/assets/images/logo/ohmyfoodwhite.svg" alt="logo">
+                <img src="../assets/images/logo/ohmyfoodwhite.svg" alt="logo">
             </div>
             <div class="allFooterLink">
                 <div class="footerlink1">
