--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="scss/stylemenu2.css">
+    <link rel="stylesheet" href="../scss/stylemenu2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,18 +14,18 @@
 <body>
     <header>
         <div class="toppage">
-            <a href="/index.html">
+            <a href="../index.html">
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
             </a>
             <div class="logo"> 
-                <img src="/assets/images/logo/ohmyfood.png" alt="logo">
+                <img src="../assets/images/logo/ohmyfood.png" alt="logo">
             </div>
         </div>
     </header>
     <main>
         <section class="all">
             <div class="image-principal">
-                <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image resto">
+                <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image resto">
             </div>
             <div class="all-menu">
                 <div class="menu">
@@ -186,7 +186,7 @@
     <footer>
         <div class="sectionftr">
             <div class="footerLogo">
-                <img src="/assets/images/logo/ohmyfoodwhite.svg" alt="logo">
+                <img src="../assets/images/logo/ohmyfoodwhite.svg" alt="logo">
             </div>
             <div class="allFooterLink">
                 <div class="footerlink1">
